--- a/WebContent/CustomerLogin.html
+++ b/WebContent/CustomerLogin.html
@@ -39,40 +39,134 @@
 	vertical-align: middle;
 }
 
+body {
+    font-family: 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-image: url("Photo.jpg");
+    background-size: cover;
+    margin: 0;
+    padding: 0;
+    color: white;
+}
+
+.login-container {
+    width: 40%;
+    margin: 100px auto;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
+.login-container h2 {
+    text-align: center;
+    margin-bottom: 20px;
+    color: #fff;
+}
+
+.form-group {
+    margin-bottom: 15px;
+    text-align: left;
+}
+
+.form-group label {
+    color: #ccc;
+    font-weight: bold;
+}
+
+.form-group input {
+    width: 100%;
+    padding: 10px;
+    border-radius: 10px;
+    border: 1px solid #ccc;
+}
+
+.btn-user-login {
+    width: 100%;
+    padding: 10px;
+    border: none;
+    background-color: #28a745;
+    color: white;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.btn-user-login:hover {
+    background-color: #218838;
+}
+
+.not-admin-link {
+    color: blue;
+    font-size: medium;
+}
+
+.not-admin-link:hover {
+    text-decoration: underline;
+}
+
+/* Original CAPTCHA CSS */
+.capbox {
+    background: #dce6f7;
+    background: linear-gradient(to right, #dce6f7, #c5d4ee);
+    border: #5c574b 0px solid;
+    border-width: 2px 2px 2px 20px;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    display: inline-block;
+    padding: 5px 8px 5px 8px;
+    border-radius: 4px 4px 4px 4px;
+}
+
+.capbox-inner {
+    font: bold 12px arial, sans-serif;
+    color: #000000;
+    background: rgba(255, 255, 255, 0.30);
+    margin: 0px auto 0px auto;
+    padding: 3px 8px 5px 10px;
+    border-radius: 4px;
+    display: inline-block;
+    vertical-align: middle;
+}
+
 #CaptchaDiv {
-	color: #000000;
-	font: normal 25px Impact, Charcoal, arial, sans-serif;
-	font-style: italic;
-	text-align: center;
-	vertical-align: middle;
-	background-color: #FFFFFF;
-	user-select: none;
-	display: inline-block;
-	padding: 3px 14px 3px 8px;
-	margin-right: 4px;
-	border-radius: 4px;
+    color: #000000;
+    font: normal 25px Impact, Charcoal, arial, sans-serif;
+    font-style: italic;
+    text-align: center;
+    vertical-align: middle;
+    background-color: #FFFFFF;
+    user-select: none;
+    display: inline-block;
+    padding: 3px 14px 3px 8px;
+    margin-right: 4px;
+    border-radius: 4px;
 }
 
 #CaptchaInput {
-	border: black 2px solid;
-	margin: 3px 0px 1px 0px;
-	width: 105px;
+    border: black 2px solid;
+    margin: 3px 0px 1px 0px;
+    width: 105px;
 }
 
 input {
-	padding: 2px 2px;
-	margin: 2px 0;
-	box-sizing: border-box;
-	border-radius: 10px;
+    padding: 2px 2px;
+    margin: 2px 0;
+    box-sizing: border-box;
+    border-radius: 10px;
 }
+    h2{
+		            text-align: center;
+            margin-bottom: 10px;
+             margin-top: 70px;
+            font-size: 50px;
+            color: black;
+	}
 </style>
 </head>
 <body onload="funload()">
 	<header>
 		<nav class="navbar navbar-expand-sm bg-dark">
-			<a class="navbar-brand"> <!-- The below line can be an image or a h1, either will work -->
-				<img src="logo.png" alt="Google logo" width="60" height="30px">
-			</a>
 
 			<button style="background-color: white;" class="navbar-toggler"
 				type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -94,43 +188,35 @@ input {
 		</nav>
 	</header>
 
-	<div id="topmid">
-		<h1>Welcome to Online Book Store</h1>
-	</div>
+<h2>Customer Login</h2>
 
-	<form action="userlog" method="post" onsubmit="checkform()"
-		id="theform">
-		<table class="tab" style="width: 40%">
-			<tr style="color: brown; padding-left: 35%">
-				<td>Customer LOGIN</td>
-			</tr>
-			<tr>
-				<td><a href="SellerLogin.html"
-					style="color: blue; font-size: medium;">Are you Seller?, Click
-						Here to Login as Admin</a></td>
-			</tr>
-			<tr>
-				<td><label for="userName">Username : </label> <input
-					type="text" name="username" id="userName"
-					placeholder="Enter your Username"><br /> <br /> <label
-					for="Password">Password : </label> <input type="password"
-					name="password" placeholder="Enter Password" id="Password"><br />
-					<br />
+	<div class="login-container">
+    <form action="userlog" method="post" onsubmit="checkform()" id="theform">
+        <div class="form-group">
+            <label for="userName">Username:</label>
+            <input type="text" class="form-control" name="username" id="userName" placeholder="Enter your Username">
+        </div>
 
-					<div class="capbox">
-						<div id="CaptchaDiv">46749</div>
-						<div class="capbox-inner">
-							<input type="hidden" id="txtCaptcha" value="46749"> <input
-								type="text" name="CaptchaInput" id="CaptchaInput" size="15"
-								placeholder="Enter Captcha"><br>
-						</div>
-					</div> <br />
-				<br /> <input class="btn btn-success" type="submit"
-					value=" Login as an User  "></td>
-			</tr>
-		</table>
-	</form>
+        <div class="form-group">
+            <label for="Password">Password:</label>
+            <input type="password" class="form-control" name="password" placeholder="Enter Password" id="Password">
+        </div>
 
+        <div class="capbox">
+            <div id="CaptchaDiv">46749</div>
+            <div class="capbox-inner">
+                <input type="hidden" id="txtCaptcha" value="46749">
+                <input type="text" class="form-control" name="CaptchaInput" id="CaptchaInput" size="15" placeholder="Enter Captcha">
+            </div>
+        </div>
+
+        <button type="submit" class="btn btn-user-login">Login as a User</button>
+    </form>
+
+    <div class="form-group mt-3">
+        <a href="SellerLogin.html" class="not-admin-link">Not a Customer? Click Here to Login as Admin</a>
+    </div>
+</div>
 
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 	<script
