--- a/WebContent/CustomerRegister.html
+++ b/WebContent/CustomerRegister.html
@@ -24,10 +24,7 @@ input {
 <body onload="funload()">
 	<header>
 		<nav class="navbar navbar-expand-sm bg-dark">
-				<a class="navbar-brand">
-					<!-- The below line can be an image or a h1, either will work -->
-					<img src="logo.png" alt="Google logo" width="60" height="30px">
-				</a>
+
 				
 				<button style="background-color:white;" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 				    <span class="navbar-toggler-icon"></span>
@@ -41,63 +38,110 @@ input {
 				</ul>
 				</div>
 			</nav>
+			<style>
+			body {
+        font-family: 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
+        background-image: url("Photo.jpg");
+        background-size: cover;
+        margin: 0;
+        padding: 0;
+        color: white;
+    }
+
+    .login-container {
+        width: 50%;
+        margin: 100px auto;
+        padding: 20px;
+        border-radius: 10px;
+        text-align: center;
+        background-color: rgba(0, 0, 0, 0.7);
+    }
+
+    .login-container h2 {
+        text-align: center;
+        margin-bottom: 20px;
+        color: #fff;
+    }
+
+    .form-group {
+        margin-bottom: 20px;
+    }
+
+    .form-group input {
+        width: 100%;
+        padding: 10px;
+        border-radius: 5px;
+        border: 1px solid #ccc;
+    }
+
+    .btn-register {
+        width: 100%;
+        padding: 10px;
+        border: none;
+        background-color: #28a745;
+        color: white;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+
+    .btn-register:hover {
+        background-color: #218838;
+    }
+
+    .acceptance-label {
+        font-size: 12px;
+        color: #007BFF;
+    }
+
+    .acceptance-label input {
+        margin-right: 5px;
+    }
+</style>
 	</header>
 	<br/>
 	
-	<form action="userreg" method="post">
-		<table class="tab" style="width:40%">
 
-			<tr style="background-color: white; color: green; border-radius: 25%">
-				<td>Enter the Registration Details</td>
-			</tr>
-			<tr>
-				<td>
-				<!-- <label for="username">Username : </label> 
-				<input
-					type="text" name="username" id="userName"
-					placeholder="Enter your Username" required>
-				<br/> -->
-				<label for="Email" style="margin-right: 5%"> Email Id : </label> 
-					<input type="text" name="mailid" id="Email"
-					placeholder="Enter your Email">
-				<br>
-				<label for="passWord">Password :&nbsp; </label> 
-				<input
-					type="password" name="password" id="passWord"
-					placeholder="Enter Password" required>
-				<br>
-				<label for="firstName">First Name : </label> 
-				<input
-					type="text" name="firstname" id="firstName"
-					placeholder="Enter your First Name" required>
-				<br>
-				<label for="lastName">Last Name : </label> 
-				<input
-					type="text" name="lastname" id="lastName"
-					placeholder="Enter your Last Name" required>
-				<br>
-				<label for="address">Address: </label>
-				<textarea name="address" id="address"
-						placeholder="Enter your Address" required> </textarea>
-				<br>
-				<label for="phno">Mobile No : </label> 
-				<input type="text"
-					name="phone" id="phno" placeholder="Enter your Phone Number"
-					required>
-				<br>
-				<input type="checkbox"
-					name="acceptance" /> 
-				<label
-					for="checkbox" for="acceptance"
-					style="font-size: small; color: blue">I
-						ACCEPT ALL TERMS &amp; CONDITIONS</label>
-				<br>
-				<input style="text-align:center;" class="btn btn-success" type="submit" value="REGISTER ME ">
-				</td>
-			</tr>
-	
-		</table>
-	</form>
+    <div class="login-container">
+        <h2>Registration Form</h2>
+        <form action="userreg" method="post">
+            <div class="form-group">
+                <label for="Email">Email Id:</label>
+                <input type="text" class="form-control" name="mailid" id="Email" placeholder="Enter your Email">
+            </div>
+
+            <div class="form-group">
+                <label for="passWord">Password:</label>
+                <input type="password" class="form-control" name="password" id="passWord" placeholder="Enter Password" required>
+            </div>
+
+            <div class="form-group">
+                <label for="firstName">First Name:</label>
+                <input type="text" class="form-control" name="firstname" id="firstName" placeholder="Enter your First Name" required>
+            </div>
+
+            <div class="form-group">
+                <label for="lastName">Last Name:</label>
+                <input type="text" class="form-control" name="lastname" id="lastName" placeholder="Enter your Last Name" required>
+            </div>
+
+            <div class="form-group">
+                <label for="address">Address:</label>
+                <textarea class="form-control" name="address" id="address" placeholder="Enter your Address" required></textarea>
+            </div>
+
+            <div class="form-group">
+                <label for="phno">Mobile No:</label>
+                <input type="text" class="form-control" name="phone" id="phno" placeholder="Enter your Phone Number" required>
+            </div>
+
+            <div class="form-group">
+                <input type="checkbox" name="acceptance" id="acceptance" />
+                <label class="acceptance-label" for="acceptance">I ACCEPT ALL TERMS &amp; CONDITIONS</label>
+            </div>
+
+            <button type="submit" class="btn btn-register">REGISTER ME</button>
+        </form>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" ></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.6/dist/umd/popper.min.js" ></script>
